@@ -1,5 +1,7 @@
 # ChangeLog for riss
 
+ * added trivial model detection (all true or all false, ignores units)
+
 ## v5.0.3
 
  * added (lazy) OTFSS to the solver
